first part of exercise printing for binary search trees